# Python

./: .gitignore  .pre-commit-config.yaml  100_PERCENT_ISSUE_QUALITY_ACHIEVED.md  ADVANCED_ISSUES_ADDED.md  BATCH_1_BEGINNER_ENHANCEMENTS.md  BATCH_1_PROGRESS_UPDATE.md  BRANCHING_STRATEGY.md  CHANGELOG.md  COMPLETE_ISSUE_CLEANUP_FINAL.md  COMPREHENSIVE_REVIEW_2.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  ISSUE_CLEANUP_SUMMARY.md  MANUAL_DOCUMENTATION_COMPLETE.md  MANUAL_DOCUMENTATION_PROGRESS.md  MANUAL_ISSUE_ENHANCEMENT_SUMMARY.md  README.md  REORGANIZATION.md  ROADMAP.md  SECURITY.md  close_duplicates.py  docker-compose.yml  find_duplicates.py  pyproject.toml  requirement.txt  requirements.txt
.github/: 1000_PROGRAMS_INDEX.md  FINAL_CLEANUP_SUMMARY.md  PACKAGES.md  PROFILE.md  RELEASE_CHECKLIST.md
.github/EXERCISES/: 002_500_exercises_part2.md  003_500_exercises_part3.md
.github/ISSUES/: 250_NEW_ISSUES_PLAN.md  ADVANCED_EXPERT.md  BEGINNER_FRIENDLY.md  BUG_FIXES.md  INTERMEDIATE.md  README.md
.github/ISSUES_TO_CREATE/: 001_CRITICAL_BUGS.md  001_bug_prime_checker.md  002_SECURITY.md  002_bug_sum_function_division.md  003_MISSING_FUNCTIONALITY.md  003_bug_hello_world_debug_output.md  004_CODE_QUALITY.md  004_bug_flask_debug_mode.md  005_TESTING.md  005_bug_file_handling_missing_file.md  006_enhancement_add_tests.md  007_enhancement_code_quality_tools.md  008_enhancement_docker_support.md  009_enhancement_database_migrations.md  010_enhancement_api_authentication.md  011_enhancement_logging.md  012_documentation_update_security.md  013_documentation_add_examples.md  014_refactor_duplicate_files.md  015_feature_interactive_exercises.md  016_feature_quiz_system.md  017_feature_coding_challenges.md  018_feature_project_templates.md  019_feature_video_tutorials.md  020_ci_cd_pipeline.md  021_enhancement_type_hints.md  022_enhancement_error_messages.md  023_documentation_beginner_guide.md  024_refactor_class_examples.md  025_feature_cheatsheets.md  ADDITIONAL_PRACTICE_SUMMARY.md  CREATED_ISSUES.md  INDEX.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  publish-docker.yml  publish-package.yml  quality-report.yml
APIs/: README.md
Basics/: README.md  conditional_statement_challenges.py  file_handling.py  filehandling_programs.py  game1.py  newfile.txt  poems.txt  textfile.txt
Basics/01_introduction/: README.md
Basics/02_variables_types/: README.md  convert_inches_to_cm.py  escape_sequences.py  find_remainder_operator.py  global_variable_example.py  input_type_validation.py  operators_comparison_assignment.py  typecasting_examples.py  typing_union_annotations.py
Basics/03_control_flow/: README.md  conditional_if_else.py  if_else_challenges.py  loops_for_while.py  loops_multiplication_table.py  print_table_reverse.py  star_pattern_hollow_square.py
Basics/04_functions/: README.md  factorial_recursive.py  format_student_details.py  function_arguments_return.py  function_default_arguments.py  function_find_greatest.py  function_print_pattern.py  function_print_table.py  functions.py  sum_natural_numbers_recursive.py  sum_natural_numbers_while.py
Basics/05_data_structures/: README.md  count_zeros_in_tuple.py  dictionary_basics.py  dictionary_friends_languages.py  dictionary_hindi_english.py  enumerate_basics.py  list_all_methods.py  list_comprehension_basics.py  list_join_strings.py  list_slicing_examples.py  list_store_fruits.py  list_strip_remove.py  list_sum_elements.py  set_all_methods.py  set_unique_numbers.py  sets_basics.py  tuple_immutability_check.py  tuple_methods_example.py
Basics/06_strings/: README.md  challenge_using_join.py  doublespace_challenge.py  greet_user_input.py  letter_template_replace.py  string_all_methods.py  string_format_method.py  string_slicing_questions.py
Basics/07_file_handling/: 02_file_readlines.py  03_file_multiple.py  04_file_numbers.py  07_file_find_word.py  08_file_search_log.py  09_file_delete.py  10_file_rename.py  12_file_replace.py  14_file_compare.py  README.md  file_copy_content.py  file_delete_content.py  file_handling.py  file_open_multiple.py  file_replace_word.py  file_search_log.py  file_write_tables.py
Basics/08_oop/: README.md  class_basics.py  class_calculator_app.py  (+10 more)
FastAPI/: README.md  main.py
api_reference/: README.md
data/: README.md
exercises/: README.md
llm_fundamentals/: README.md
rest_api/: README.md  main.py
tests/: __init__.py  test_examples.py
tools/: progress.py  validate.py
(+31 files in other folders)
