# Modern Python Project Configuration
# Using pyproject.toml as the single source of truth

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-learning"
version = "2.0.0"
description = "Complete Python learning platform - from basics to LLMs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pritam", email = "learn@pythonmastery.dev"}
]
keywords = [
    "python",
    "learning",
    "education",
    "tutorial",
    "fastapi",
    "llm",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development"
]

dependencies = [
    # Web Development
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "pydantic>=2.0.0",
    
    # Data Science
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    
    # Deep Learning & LLMs
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tiktoken>=0.5.0",
    "safetensors>=0.3.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyttsx3>=2.90.0",
    "pyjokes>=0.6.0"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    
    # Code Quality
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0"
]

llm = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "llama-index>=0.10.0",
    "litgpt>=0.1.0",
    "ollama>=0.1.0"
]

all = [
    "python-learning[dev,llm]"
]

[project.urls]
Homepage = "https://github.com/hackdartstorm/Python"
Documentation = "https://github.com/hackdartstorm/Python/wiki"
Repository = "https://github.com/hackdartstorm/Python.git"
Issues = "https://github.com/hackdartstorm/Python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["basics*", "fastapi*", "rest_api*", "llm_fundamentals*"]

# Black - Code Formatting
[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

# Ruff - Fast Python Linter
[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "ARG001", # unused function argument (common in examples)
]

[tool.ruff.per-file-ignores]
"basics/*" = ["E402", "F401"]  # Allow imports not at top in examples
"llm_fundamentals/*" = ["E402", "F401", "B007"]

# MyPy - Type Checking
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Relaxed for learning examples
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = true

# Pytest - Testing Framework
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"

# Coverage
[tool.coverage.run]
source = ["basics", "fastapi", "rest_api", "llm_fundamentals"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
